<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    
    <FrameLayout
        android:id="@+id/frame_layout"
        android:padding="1dp"
        android:background="@drawable/background_drawing_view_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toTopOf="@id/layout_paint_color"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:contentDescription="@string/background_image"
            android:id="@+id/image_background"
            android:scaleType="centerCrop"
            tools:src="@drawable/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <com.example.drawingapp.DrawingView
            android:id="@+id/drawing_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="#80FFFFFF" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/layout_paint_color"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/layout_action_buttons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frame_layout"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20dp"
        android:gravity="center"
        android:layout_height="wrap_content">

        <ImageButton
            android:contentDescription="@string/color_pallet"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/pallet_normal"
            android:tag="@color/black"
            android:onClick="paintClicked"
            android:background="@color/black"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageButton
            android:contentDescription="@string/color_pallet"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/pallet_normal"
            android:tag="@color/skin"
            android:onClick="paintClicked"
            android:background="@color/skin"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageButton
            android:contentDescription="@string/color_pallet"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:onClick="paintClicked"
            android:src="@drawable/pallet_normal"
            android:tag="@color/red"
            android:background="@color/red"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageButton
            android:contentDescription="@string/color_pallet"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:onClick="paintClicked"
            android:src="@drawable/pallet_normal"
            android:tag="@color/green"
            android:background="@color/green"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageButton
            android:contentDescription="@string/color_pallet"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:onClick="paintClicked"
            android:src="@drawable/pallet_normal"
            android:tag="@color/blue"
            android:background="@color/blue"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageButton
            android:contentDescription="@string/color_pallet"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:onClick="paintClicked"
            android:src="@drawable/pallet_normal"
            android:tag="@color/yellow"
            android:background="@color/yellow"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageButton
            android:contentDescription="@string/color_pallet"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:onClick="paintClicked"
            android:src="@drawable/pallet_normal"
            android:tag="@color/lollipop"
            android:background="@color/lollipop"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageButton
            android:contentDescription="@string/color_pallet"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:onClick="paintClicked"
            android:src="@drawable/pallet_normal"
            android:tag="random"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageButton
            android:contentDescription="@string/color_pallet"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:onClick="paintClicked"
            android:src="@drawable/pallet_normal"
            android:tag="eraser"
            android:background="@color/white"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_action_buttons"
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:contentDescription="@string/gallery_button"
            android:id="@+id/ib_gallery"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_gallery"
            android:scaleType="fitXY"
            />

        <ImageButton
            android:contentDescription="@string/undo_button"
            android:id="@+id/ib_undo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_undo"
            android:scaleType="fitXY"
            />

        <ImageButton
            android:contentDescription="@string/redo_button"
            android:id="@+id/ib_redo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_redo"
            android:scaleType="fitXY"
            />

        <ImageButton
            android:contentDescription="@string/change_brush_size"
            android:id="@+id/ib_brush"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_brush"
            android:scaleType="fitXY"
            />

        <ImageButton
            android:contentDescription="@string/save_button"
            android:id="@+id/ib_save"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_save"
            android:scaleType="fitXY"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>